<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_ficha"
        android:background="@drawable/fondo_tarjeta"
        android:orientation="vertical"
        android:padding="@dimen/margen_ficha_adentro" >

        <TextView
            android:id="@+id/textoTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/futbol"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/rojo_claro"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bolivar" />

            <TextView
                android:id="@+id/textoMarcador1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dos"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versus"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textoMarcador2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cero"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/strongest" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:text="Ver detalle"
                android:textColor="@color/blanco1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/fondo_boton"
                android:text="Ruta al evento"
                android:textColor="@color/blanco1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>